# aaarc-club-logger

./: README.md
.github/: dependabot.yml
.github/workflows/: main.yml
src/: index.html  styles.css  supabase.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
